# installer

./: .gitignore  .prettierignore  LICENSE  README.md  TRUST.md  crowdin.yml  flake.nix  go.work  go.work.sum  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs
.github/workflows/: build-signed.yml  build.yml  git-repo-sync.yml
src/: app.d.ts  app.html  app.postcss
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs  mrpack.rs
src-tauri/src/verifier/: mod.rs
src/lib/: flexver.ts  i18n.ts  installer.ts  modrinth.ts
src/lib/lang/: be.json  en.json  es-es.json  es-ve.json  et.json  fr.json  he.json  index.ts  it.json  ko.json  ms-arab.json  ms.json  pl.json  pt-PT.json  pt-br.json  pt-pt.json  qep.json  ro.json  ru.json  tr.json  uk.json  vi.json  zh-cn.json  zh-hk.json  zh-tw.json  zlm.json
src/routes/: +page.svelte
verifier/: build.sh  go.mod  go.sum  main.go
