[package]
name = "paigaldaja"
version = "0.1.0"
description = "A whitelabel .mrpack installer"
authors = ["Skye"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = [ "shell-open", "dialog-confirm", "http-api", "window-close"] }
zip = "0.6.6"
tokio = { version = "1", features = [ "fs" ] }
sha2 = "0.10.6"
hex = "0.4.3"
time = { version = "0.3.15", features = [ "formatting" ] }
anyhow = "1.0.71"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
